sample1-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample1-app
  template:
    metadata: sample1-app
      labels:
        app: sample1-app
    spec:
      containers:
        - name: sample1-app
          image: 
---
apiVersion: v1
kind: Service
metadata:
  name: sample1-app-service
spec:
  type: NodePort
  selector:
    app: sample1-app
  ports:
    - port: 3000
      targetPort: 3000
