sample2-deploymeny.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample2-app
  template:
    metadata:
      labels:
        app: sample2-app
    spec:
      containers:
        - name: sample2-app
          image: 
---
apiVersion: v1
kind: Service
metadata:
  name: sample2-app-service
spec:
  type: NodePort
  selector:
    app: sample2-app
  ports:
    - port: 3000
      targetPort: 3000
