ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: sample1.originatetech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample1-app-service
                port:
                  number: 3000
    - host: sample2.originatetech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample2-app-service
                port:
                  number: 3000
